wrapper/rand123wrapper.h

   
   R123_STATIC_INLINE R123_FORCE_INLINE()
   void ars2x64_u01( frand123State_t *state, double *res )
   {
      ars4x32_ctr_t *ctr_ars = (ars4x32_ctr_t*)&( state->state[0] );
      ars4x32_key_t *key_ars = (ars4x32_key_t*)&( state->state[2] );
      ars4x32_ctr_t resArs = ars4x32_R( 6, *ctr_ars, *key_ars );
      uint64_t resInts[2];
      resInts[0] = *((uint64_t*)&resArs.v[0]);
      resInts[1] = *((uint64_t*)&resArs.v[2]);
      res[0] = (double)resInts[0] * factor_double + summand_double;
      res[1] = (double)resInts[1] * factor_double + summand_double;
      if( ctr_ars->v[0] < UINT32_MAX )
         ctr_ars->v[0]++;
      else
      {
         ctr_ars->v[0] = 0;
         if( ctr_ars->v[1] < UINT32_MAX )
            ctr_ars->v[1]++;
         else
         {
            ctr_ars->v[1] = 0;
            if( ctr_ars->v[2] < UINT32_MAX )
               ctr_ars->v[2]++;
            else
            {
               ctr_ars->v[2] = 0;
               ctr_ars->v[3]++;
            }
         }
      }
      return;
   }
   R123_STATIC_INLINE R123_FORCE_INLINE()
   void ars4x32_u01( frand123State_t *state, float *res )
   {
      ars4x32_ctr_t *ctr_ars = (ars4x32_ctr_t*)&( state->state[0] );
      ars4x32_key_t *key_ars = (ars4x32_key_t*)&( state->state[2] );
      ars1xm128i_ctr_t c128;
      ars1xm128i_key_t k128;
      c128.v[0].m = _mm_set_epi32( ctr_ars->v[3], ctr_ars->v[2], ctr_ars->v[1], ctr_ars->v[0] );
      k128.v[0].m = _mm_set_epi32( key_ars->v[3], key_ars->v[2], key_ars->v[1], key_ars->v[0] );
      c128 = ars1xm128i_R( 6, c128, k128 );
      __m128 asSignedFloats = _mm_cvtepi32_ps( c128.v[0].m );
      __m128 normFactor = _mm_load_ps1( &factor_float );
      __m128 summand    = _mm_load_ps1( &summand_float );
#ifdef USE_FMA
      __m128 restrictedToUnitInterval = _mm_fmadd_ps( asSignedFloats, normFactor, summand );
#else
      __m128 restrictedToUnitCircle = _mm_mul_ps( asSignedFloats, normFactor );
      __m128 restrictedToUnitInterval = _mm_add_ps( restrictedToUnitCircle, summand );
#endif
      _mm_storeu_ps( res, restrictedToUnitInterval );
      if( ctr_ars->v[0] < UINT32_MAX )
         ctr_ars->v[0]++;
      else
      {
         ctr_ars->v[0] = 0;
         if( ctr_ars->v[1] < UINT32_MAX )
            ctr_ars->v[1]++;
         else
         {
            ctr_ars->v[1] = 0;
            if( ctr_ars->v[2] < UINT32_MAX )
               ctr_ars->v[2]++;
            else
            {
               ctr_ars->v[2] = 0;
               ctr_ars->v[3]++;
            }
         }
      }
      return;
   }
   R123_STATIC_INLINE R123_FORCE_INLINE()
   void ars2x64_int( frand123State_t *state, int64_t *res )
   {
      ars4x32_ctr_t *ctr_ars = (ars4x32_ctr_t*)&( state->state[0] );
      ars4x32_key_t *key_ars = (ars4x32_key_t*)&( state->state[2] );
      ars4x32_ctr_t resArs = ars4x32_R( 6, *ctr_ars, *key_ars );
      res[0] = *((int64_t*)&resArs.v[0]);
      res[1] = *((int64_t*)&resArs.v[2]);
      if( ctr_ars->v[0] < UINT32_MAX )
         ctr_ars->v[0]++;
      else
      {
         ctr_ars->v[0] = 0;
         if( ctr_ars->v[1] < UINT32_MAX )
            ctr_ars->v[1]++;
         else
         {
            ctr_ars->v[1] = 0;
            if( ctr_ars->v[2] < UINT32_MAX )
               ctr_ars->v[2]++;
            else
            {
               ctr_ars->v[2] = 0;
               ctr_ars->v[3]++;
            }
         }
      }
      return;
   }
   R123_STATIC_INLINE R123_FORCE_INLINE()
   void ars4x32_int( frand123State_t *state, int32_t *res )
   {
      ars4x32_ctr_t *ctr_ars = (ars4x32_ctr_t*)&( state->state[0] );
      ars4x32_key_t *key_ars = (ars4x32_key_t*)&( state->state[2] );
      ars4x32_ctr_t resArs = ars4x32_R( 6, *ctr_ars, *key_ars );
      res[0] = *((int32_t*)&resArs.v[0]);
      res[1] = *((int32_t*)&resArs.v[1]);
      res[2] = *((int32_t*)&resArs.v[2]);
      res[3] = *((int32_t*)&resArs.v[3]);
      if( ctr_ars->v[0] < UINT32_MAX )
         ctr_ars->v[0]++;
      else
      {
         ctr_ars->v[0] = 0;
         if( ctr_ars->v[1] < UINT32_MAX )
            ctr_ars->v[1]++;
         else
         {
            ctr_ars->v[1] = 0;
            if( ctr_ars->v[2] < UINT32_MAX )
               ctr_ars->v[2]++;
            else
            {
               ctr_ars->v[2] = 0;
               ctr_ars->v[3]++;
            }
         }
      }
      return;
   }
   typedef union
   {
      threefry2x64_ctr_t ctr;
      uint64_t ints[2];
   } conv_union_t;
   R123_STATIC_INLINE R123_FORCE_INLINE()
   void threefry2x64_u01( frand123State_t *state, double *res )
   {
      threefry2x64_ctr_t *ctr_threefry = (threefry2x64_ctr_t*)&( state->state[0] );
      threefry2x64_key_t *key_threefry = (threefry2x64_key_t*)&( state->state[2] );
      conv_union_t resInt;
      resInt.ctr = threefry2x64_R( 13, *ctr_threefry, *key_threefry );
      res[0] = (double)resInt.ints[0] * factor_double + summand_double;
      res[1] = (double)resInt.ints[1] * factor_double + summand_double;
      if( ctr_threefry->v[0] < UINT64_MAX )
         ctr_threefry->v[0]++;
      else
      {
         ctr_threefry->v[0] = 0;
         ctr_threefry->v[1]++;
      }
      return;
   }
   R123_STATIC_INLINE R123_FORCE_INLINE()
   void threefry4x32_u01( frand123State_t *state, float *res )
   {
      threefry4x32_ctr_t *ctr_threefry = (threefry4x32_ctr_t*)&( state->state[0] );
      threefry4x32_key_t *key_threefry = (threefry4x32_key_t*)&( state->state[2] );
      threefry4x32_ctr_t resInt = threefry4x32_R( 12, *ctr_threefry, *key_threefry );
      res[0] = (float)resInt.v[0] * factor_float + summand_float;
      res[1] = (float)resInt.v[1] * factor_float + summand_float;
      res[2] = (float)resInt.v[2] * factor_float + summand_float;
      res[3] = (float)resInt.v[3] * factor_float + summand_float;
      if( ctr_threefry->v[0] < UINT32_MAX )
         ctr_threefry->v[0]++;
      else
      {
         ctr_threefry->v[0] = 0;
         if( ctr_threefry->v[1] < UINT32_MAX )
            ctr_threefry->v[1]++;
         else
         {
            ctr_threefry->v[1] = 0;
            if( ctr_threefry->v[2] < UINT32_MAX )
               ctr_threefry->v[2]++;
            else
            {
               ctr_threefry->v[2] = 0;
               ctr_threefry->v[3]++;
            }
         }
      }
      return;
   }
   R123_STATIC_INLINE R123_FORCE_INLINE()
   void threefry2x64_int( frand123State_t *state, int64_t *res )
   {
      threefry2x64_ctr_t *ctr_threefry = (threefry2x64_ctr_t*)&( state->state[0] );
      threefry2x64_key_t *key_threefry = (threefry2x64_key_t*)&( state->state[2] );
      threefry2x64_ctr_t resThreefry = threefry2x64_R( 13, *ctr_threefry, *key_threefry );
      res[0] = *((int64_t*)&resThreefry.v[0]);
      res[1] = *((int64_t*)&resThreefry.v[1]);
      if( ctr_threefry->v[0] < UINT64_MAX )
         ctr_threefry->v[0]++;
      else
      {
         ctr_threefry->v[0] = 0;
         ctr_threefry->v[1]++;
      }
      return;
   }
   R123_STATIC_INLINE R123_FORCE_INLINE()
   void threefry4x32_int( frand123State_t *state, int32_t *res )
   {
      threefry4x32_ctr_t *ctr_threefry = (threefry4x32_ctr_t*)&( state->state[0] );
      threefry4x32_key_t *key_threefry = (threefry4x32_key_t*)&( state->state[2] );
      threefry4x32_ctr_t resInt = threefry4x32_R( 12, *ctr_threefry, *key_threefry );
      res[0] = *((int32_t*)&resInt.v[0]);
      res[1] = *((int32_t*)&resInt.v[1]);
      res[2] = *((int32_t*)&resInt.v[2]);
      res[3] = *((int32_t*)&resInt.v[3]);
      if( ctr_threefry->v[0] < UINT32_MAX )
         ctr_threefry->v[0]++;
      else
      {
         ctr_threefry->v[0] = 0;
         if( ctr_threefry->v[1] < UINT32_MAX )
            ctr_threefry->v[1]++;
         else
         {
            ctr_threefry->v[1] = 0;
            if( ctr_threefry->v[2] < UINT32_MAX )
               ctr_threefry->v[2]++;
            else
            {
               ctr_threefry->v[2] = 0;
               ctr_threefry->v[3]++;
            }
         }
      }
   }
   R123_STATIC_INLINE R123_FORCE_INLINE()
   void polar2x64( frand123State_t *state, const double mu, const double sigma, double *res )
   {
      double u[ 2 ];
      double x[ 2 ];
      double r2;
      double f;
      do
      {
#if USE_ARS
         ars2x64_u01( &( state->state ), u );
#else
         threefry2x64_u01( &( state->state ), u );
#endif
         x[ 0 ] = 2. * u[ 0 ] - 1.;
         x[ 1 ] = 2. * u[ 1 ] - 1.;
         r2 = x[ 0 ] * x[ 0 ] + x[ 1 ] * x[ 1 ];
      } while( ( r2 >= 1. ) || ( r2 == 0. ) );
      f = sqrt( -2. * log( r2 ) / r2 );
      res[ 0 ] = mu + sigma * f * x[ 0 ];
      res[ 1 ] = mu + sigma * f * x[ 1 ];
      return;
   }
   R123_STATIC_INLINE R123_FORCE_INLINE()
   void wichura2x64( frand123State_t *state, const double mu, const double sigma, double *res )
   {
      double p[ 2 ];
#ifdef USE_ARS
      ars2x64_u01( state, p );
#else
      threefry2x64_u01( state, p );
#endif
      wichura2x64kernel( p, mu, sigma, res );
      return;
   }
void polar4x32( frand123State_t *state, const float mu, const float sigma, float *res )
{
   float u[ 4 ];
   float x[ 4 ];
   float r2[ 2 ];
   float f[ 2 ];
   do
   {
#if USE_ARS
      ars4x32_u01( state, u );
#else
      threefry4x32_u01( state, u );
#endif
      x[ 0 ] = 2.f * u[ 0 ] - 1.f;
      x[ 1 ] = 2.f * u[ 1 ] - 1.f;
      x[ 2 ] = 2.f * u[ 2 ] - 1.f;
      x[ 3 ] = 2.f * u[ 3 ] - 1.f;
      r2[ 0 ] = x[ 0 ] * x[ 0 ] + x[ 1 ] * x[ 1 ];
      r2[ 1 ] = x[ 2 ] * x[ 2 ] + x[ 3 ] * x[ 3 ];
   } while( ( r2[ 0 ] >= 1.f ) || ( r2[ 0 ] == 0.f ) || ( r2[ 1 ] >= 1.f ) || ( r2[ 1 ] == 0.f ) );
   f[ 0 ] = sqrt( -2.f * log( r2[ 0 ] ) / r2[ 0 ] );
   f[ 1 ] = sqrt( -2.f * log( r2[ 1 ] ) / r2[ 1 ] );
   res[ 0 ] = mu + sigma * f[ 0 ] * x[ 0 ];
   res[ 1 ] = mu + sigma * f[ 0 ] * x[ 1 ];
   res[ 2 ] = mu + sigma * f[ 1 ] * x[ 2 ];
   res[ 3 ] = mu + sigma * f[ 1 ] * x[ 3 ];
   return;
}
void polar4x32_two( frand123State_t *state, const float mu, const float sigma, float *res )
{
   float u[ 4 ];
   float x[ 4 ];
   float r2[ 2 ];
   float f;
   bool in[ 2 ];
   do
   {
#if USE_ARS
      ars4x32_u01( state, u );
#else
      threefry4x32_u01( state, u );
#endif
      x[ 0 ] = 2.f * u[ 0 ] - 1.f;
      x[ 1 ] = 2.f * u[ 1 ] - 1.f;
      x[ 2 ] = 2.f * u[ 2 ] - 1.f;
      x[ 3 ] = 2.f * u[ 3 ] - 1.f;
      r2[ 0 ] = x[ 0 ] * x[ 0 ] + x[ 1 ] * x[ 1 ];
      r2[ 1 ] = x[ 2 ] * x[ 2 ] + x[ 3 ] * x[ 3 ];
      in[ 0 ] = ( r2[ 0 ] > 0.f ) && ( r2[ 0 ] < 1.f );
      in[ 1 ] = ( r2[ 1 ] > 0.f ) && ( r2[ 1 ] < 1.f );
   } while( ! ( in[ 0 ] || in[ 1 ] ) );
   if( in[ 0 ] )
   {
      f = sqrt( -2.f * log( r2[ 0 ] ) / r2[ 0 ] );
      res[ 0 ] = mu + sigma * f * x[ 0 ];
      res[ 1 ] = mu + sigma * f * x[ 1 ];
   }
   else
   {
      f = sqrt( -2.f * log( r2[ 1 ] ) / r2[ 1 ] );
      res[ 0 ] = mu + sigma * f * x[ 2 ];
      res[ 1 ] = mu + sigma * f * x[ 3 ];
   }
   return;
}